# CubeGame

./: .clang-format  :w  CMakeLists.txt
.cache/clangd/index/: Camera.cpp.917BBBFEEC8E25F0.idx  Camera.h.729F34050C1365F5.idx  ChunkBuilder.cpp.8471E318CAFA686D.idx  ChunkBuilder.h.018AA563D0D9A313.idx  Config.h.132C275512DA3215.idx  Constants.h.AB9B30B9B05E854A.idx  Face.h.A883BFE1E58DB4E4.idx  IndexBuffer.cpp.010F83E9285117C2.idx  IndexBuffer.h.3DAE5B8517B25933.idx  ScreenWindow.cpp.43F640E6EF0F3D36.idx  ScreenWindow.h.B29C9EC82123AFF1.idx  ShaderManager.cpp.2816FB8A17C8066B.idx  ShaderManager.h.7FB01EAFA0C3FB6C.idx  ShaderUtils.cpp.4D730E39306AC5B2.idx  ShaderUtils.h.AFF14D6070DED69D.idx  ShaderWriter.cpp.F9963183572FEEE4.idx  ShaderWriter.h.2CE68B8841FD6027.idx  Utils.cpp.5F43020FD75A24FC.idx  Utils.h.7BA7BDE4FD803C20.idx  VertexArray.cpp.CF073798522901F4.idx  VertexArray.h.490E7E644CA695F0.idx  VertexBuffer.cpp.0B179137E0250DA3.idx  VertexBuffer.h.BEA3056CC2E27FB2.idx  VertexBufferLayout.h.0407F77245798AC9.idx  context.c.C0AFD1F5FB060FB7.idx  egl_context.c.F069D256C6859BC5.idx  gl.c.3C62DC27D0287CBC.idx  gl.h.7B4E3B25DEDA1E50.idx  glad.c.0EE116AC096C9D80.idx  glad.h.4405F7ECF421CE00.idx  glfw3.h.A39DC26951AFF2A7.idx  glfw3native.h.F8A998F1CC02BEE3.idx  glx_context.c.07A275957B2678B9.idx  init.c.730E7F9FF1942103.idx  input.c.82C4174944388999.idx  internal.h.9E80579C083E014D.idx  khrplatform.h.18B1B9DDBC068F25.idx  linux_joystick.c.F601ACB7F1EC7630.idx  linux_joystick.h.52882348E940722C.idx  logger.cpp.A2163F5A269189D5.idx  (+32 more)
include/: App.h  Camera.h  ChunkBuilder.h  Config.h  Constants.h  Cube.h  Direction.h  Face.h  Game.h  ImGuiView.h  IndexBuffer.h  Level.h  LevelConfig.h  LevelManager.h  Light.h  LuaExecutor.h  MeshColor.h  Renderer.h  ScreenWindow.h  ShaderManager.h  ShaderUtils.h  ShaderWriter.h  Utils.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h  config.h
include/vox/: Lexer.h
resources/levels/level_1/: config.json  scene.lua
resources/shaders/: basic.shader
src/: main.cpp
src/core/: App.cpp  Camera.cpp  ChunkBuilder.cpp  Direction.cpp  Face.cpp  Game.cpp  ImGuiView.cpp  IndexBuffer.cpp  LevelManager.cpp  Light.cpp  LuaExecutor.cpp  MeshColor.cpp  Renderer.cpp  ScreenWindow.cpp  ShaderManager.cpp  ShaderUtils.cpp  ShaderWriter.cpp  Utils.cpp  VertexArray.cpp  VertexBuffer.cpp
src/core/vox/: Lexer.cpp
